# CodeCrew

./: .gitignore  AUDIT_REPORT.md  Agents.md  INSTALL.md  MOP.md  README.md  bridge.py  maid.sh  pyproject.toml  requirements.txt  stress_test_bridge.py
.claude/: CLAUDE.md
CodeCREW/: PROJECT.md  aui.py  codecrew.py
CodeMAID/: api.py  codemaid.py  manual.html  onboarder.py
CodeMOP/: README.md  __init__.py  assembler.py  cleaner.py  guard.py  indexer.py  requirements.txt  setup.py  utils.py  walker.py
Setup-HowTo-Manual/: index.html
agents-example/: instructions.md
codemaid/: MOP.md  __init__.py  agent.py  cat.py  commands.py  config.py  defaults.py  gateway.py  main.py  memory.py  onboarder.py  prompt_guard.py  prompt_review.py  provider.py  renderer.py  skills_loader.py  todo.md  vault.py
docs/: 000-quick-reference.md  01-architecture-audit.md  Agent-Audit.md  ChatGPT.md  Claude-Audit.md  Claude.md  CodeMAID-Security-Audit-2026-04-19.md  CodeMAID-System-Audit.md  CodeMAID-TUI-Audit.md  DeepSeek.md  Gemini.md  Grok.md  MANUSCRIPT_CHUNK_1.md  MANUSCRIPT_CHUNK_2.md  NewYou-Audit.txt  Perplexity.md  Qwen.md  Second-Third-Eyes-Guide.md  TUI-Connection-Audit.md  document_inventory.md  netdata_ai_residency.md  netdata_residency.md  personality_summary.md  todo_edits.md
legacy/: client_test.py
openpaws/: __init__.py  agent.py  cat.py  cli.py  gateway.py  memory.py  onboarder.py  provider.py  skills_loader.py  tools.py
resources/: CODEMAID.md  CODEMAID_TODO_EXTRACT.md  agent.py  cat.py  cli.py  gateway.py  memory.py  onboarder.py  provider.py  skills_loader.py  (+1 more)
(+54 files in other folders)
