[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "codemaid"
version = "4.2.0"
description = "CODEMAID — terminal AI coding assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=10.9.0,<16.0.0",
    "requests>=2.28.0,<3.0.0",
    "pyyaml>=6.0,<8.0",
]

[project.scripts]
codemaid = "codemaid.cli:main"
maid = "codemaid.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["codemaid"]
omit = ["tests/*", "*/venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
include = ["codemaid*"]

[tool.setuptools.package-data]
codemaid = ["*.md"]

[tool.setuptools.exclude-package-data]
codemaid = ["__pycache__/*", "*.pyc"]
